Fixed labels and translations

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2018-05-05T05:32:25.429Z\n"
-"PO-Revision-Date: 2018-05-05T05:32:25.430Z\n"
+"POT-Creation-Date: 2018-05-07T12:10:57.188Z\n"
+"PO-Revision-Date: 2018-05-07T12:10:57.188Z\n"
 
 msgid "Totals"
 msgstr ""
@@ -112,8 +112,7 @@ msgstr ""
 
 msgid ""
 "Configuration: used for changing general export parameters (existing "
-"parameters will be\n"
-"\t\t\t\t\toverwritten)"
+"parameters will be overwritten)"
 msgstr ""
 
 msgid "Import: used for the initial import of RIM metadata only."
@@ -127,9 +126,8 @@ msgstr ""
 
 msgid ""
 "RIM export is done by district (admin 2) level, and also includes the "
-"province (admin 1) level and a\n"
-"\t\t\t\t\tcountry code. Please enter country code and select province, "
-"district levels here:"
+"province (admin 1) level and a country code. Please enter country code and "
+"select province, district levels here:"
 msgstr ""
 
 msgid "Country code:"
@@ -149,10 +147,9 @@ msgstr ""
 
 msgid ""
 "RIM export relies on configuration of a set of DHIS 2 indicators. This page "
-"is used for selecting the relevant\n"
-"\t\t\t\t\tindicators and importing them into the DHIS 2. Administrators "
-"must then configure the indicator formulas\n"
-"\t\t\t\t\tto map each indicator to the appropriate data elements."
+"is used for selecting the relevant indicators and importing them into the "
+"DHIS 2. Administrators must then configure the indicator formulas to map "
+"each indicator to the appropriate data elements."
 msgstr ""
 
 msgid ""
@@ -162,11 +159,10 @@ msgstr ""
 
 msgid ""
 "A new user group will be imported with the current users as member, and the "
-"RIM indicators will be visible\n"
-"\t\t\t\t\tonly to user in that group. Only users in this group can thus "
-"configure the RIM indicators, and export\n"
-"\t\t\t\t\tdata in RIM format. Additional users can be added to this group "
-"in the DHIS 2 user management app."
+"RIM indicators will be visible only to user in that group. Only users in "
+"this group can thus configure the RIM indicators, and export data in RIM "
+"format. Additional users can be added to this group in the DHIS 2 user "
+"management app."
 msgstr ""
 
 msgid "Stock"
@@ -178,7 +174,7 @@ msgstr ""
 msgid "AEFI"
 msgstr ""
 
-msgid "Is information on AEFIs <em>by vaccine</em> available?"
+msgid "Is information on AEFIs by vaccine available?"
 msgstr ""
 
 msgid "Vaccine disaggregation"
