--- a/i18n/fr.po
+++ b/i18n/fr.po
@@ -1,16 +1,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: i18next-conv\n"
+"POT-Creation-Date: 2018-05-07T12:10:57.188Z\n"
+"PO-Revision-Date: 2018-05-07 14:12+0200\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"POT-Creation-Date: 2018-05-05T05:32:25.429Z\n"
-"PO-Revision-Date: 2018-05-07 14:05+0200\n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.0.7\n"
-"Last-Translator: \n"
-"Language: fr\n"
 
 msgid "Totals"
 msgstr "Totaux"
@@ -116,8 +116,7 @@ msgstr "Configuration d’exportation RIM"
 
 msgid ""
 "Configuration: used for changing general export parameters (existing "
-"parameters will be\n"
-"\t\t\t\t\toverwritten)"
+"parameters will be overwritten)"
 msgstr ""
 "Configuration: utilisé pour modifier les paramètres généraux d’exportation "
 "(les paramètres existants seront écrasé)"
@@ -134,9 +133,8 @@ msgstr "Niveaux d’unité organisation"
 
 msgid ""
 "RIM export is done by district (admin 2) level, and also includes the "
-"province (admin 1) level and a\n"
-"\t\t\t\t\tcountry code. Please enter country code and select province, "
-"district levels here:"
+"province (admin 1) level and a country code. Please enter country code and "
+"select province, district levels here:"
 msgstr ""
 "L’exportation RIM se fait par le niveau district (admin 2), et comprend "
 "également le niveau de la province (admin 1) et un code pays. S’il vous "
@@ -163,10 +161,9 @@ msgstr "Importer les parametres"
 
 msgid ""
 "RIM export relies on configuration of a set of DHIS 2 indicators. This page "
-"is used for selecting the relevant\n"
-"\t\t\t\t\tindicators and importing them into the DHIS 2. Administrators must "
-"then configure the indicator formulas\n"
-"\t\t\t\t\tto map each indicator to the appropriate data elements."
+"is used for selecting the relevant indicators and importing them into the "
+"DHIS 2. Administrators must then configure the indicator formulas to map "
+"each indicator to the appropriate data elements."
 msgstr ""
 "L’exportation RIM repose sur la configuration d’un ensemble d’indicateurs "
 "DHIS 2. Cette page est utilisée pour sélectionner les indicateurs appropriés "
@@ -183,11 +180,10 @@ msgstr ""
 
 msgid ""
 "A new user group will be imported with the current users as member, and the "
-"RIM indicators will be visible\n"
-"\t\t\t\t\tonly to user in that group. Only users in this group can thus "
-"configure the RIM indicators, and export\n"
-"\t\t\t\t\tdata in RIM format. Additional users can be added to this group in "
-"the DHIS 2 user management app."
+"RIM indicators will be visible only to user in that group. Only users in "
+"this group can thus configure the RIM indicators, and export data in RIM "
+"format. Additional users can be added to this group in the DHIS 2 user "
+"management app."
 msgstr ""
 "Un nouveau groupe d’utilisateurs sera importé avec les utilisateurs actuels "
 "en tant que membre, et les indicateurs RIM seront visibles seulement à "
@@ -207,8 +203,8 @@ msgstr ""
 msgid "AEFI"
 msgstr "MAPI"
 
-msgid "Is information on AEFIs <em>by vaccine</em> available?"
-msgstr "L’information sur les MAPI <em> par vaccin </ em> est-elle disponible?"
+msgid "Is information on AEFIs by vaccine available?"
+msgstr "L’information sur les MAPI par vaccin est-elle disponible?"
 
 msgid "Vaccine disaggregation"
 msgstr "Désagrégation des vaccins"
