--- a/i18n/fr.po
+++ b/i18n/fr.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: i18next-conv\n"
-"POT-Creation-Date: 2018-05-07T12:10:57.188Z\n"
-"PO-Revision-Date: 2018-05-07 14:12+0200\n"
+"POT-Creation-Date: 2018-05-07T13:59:34.190Z\n"
+"PO-Revision-Date: 2018-05-08 10:33+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -18,8 +18,29 @@ msgstr "Totaux"
 msgid "Details"
 msgstr "Détails"
 
+msgid "Select data element"
+msgstr "Choisi élément de données"
+
+msgid "Loading"
+msgstr "Chargement"
+
+msgid "No data elements in"
+msgstr "Aucun élément de donnée dans"
+
+msgid "All data elements"
+msgstr "Tous les éléments de données"
+
 msgid "Indicator group"
 msgstr "Groupe d’indicateurs"
+
+msgid "Select indicator"
+msgstr "Choisi indicateur"
+
+msgid "No indicators in"
+msgstr "Aucun indicateur dans"
+
+msgid "All indicators"
+msgstr "Tous les indicateurs"
 
 msgid "Boundary"
 msgstr "Frontière"
@@ -39,8 +60,17 @@ msgstr "Groupe d’unités d’organisation"
 msgid "Selected"
 msgstr "Choisi"
 
+msgid "Select level"
+msgstr "Choisir un niveau"
+
+msgid "Select group"
+msgstr "Choisir un group"
+
 msgid "Report type"
 msgstr "Type de rapport"
+
+msgid "Data"
+msgstr "Données"
 
 msgid "Period"
 msgstr "Période"
@@ -134,12 +164,12 @@ msgstr "Niveaux d’unité organisation"
 msgid ""
 "RIM export is done by district (admin 2) level, and also includes the "
 "province (admin 1) level and a country code. Please enter country code and "
-"select province, district levels here:"
+"select province, district levels here"
 msgstr ""
 "L’exportation RIM se fait par le niveau district (admin 2), et comprend "
 "également le niveau de la province (admin 1) et un code pays. S’il vous "
 "plaît entrer le code du pays et sélectionnez la province, les niveaux de "
-"district ici:"
+"district ici"
 
 msgid "Country code:"
 msgstr "Code pays:"
@@ -148,10 +178,10 @@ msgid "Completeness"
 msgstr "Complétude"
 
 msgid ""
-"Select the EPI data set/reporting form to use for reporting on completeness:"
+"Select the EPI data set/reporting form to use for reporting on completeness"
 msgstr ""
 "Sélectionnez l’ensemble de données/formulaire PEV à utiliser pour le rapport "
-"de complétude:"
+"de complétude"
 
 msgid "Update configuration"
 msgstr "Mise à jour la configuration"
@@ -228,9 +258,6 @@ msgstr "Importer des métadonnées RIM et mettre à jour la configuration"
 msgid "Download CSV"
 msgstr "Télécharger CSV"
 
-msgid "Data"
-msgstr "Données"
-
 msgid "All ages"
 msgstr "Tous  les ages"
 
@@ -251,3 +278,109 @@ msgstr "Category C"
 
 msgid "Category D"
 msgstr "Catégorie D"
+
+msgid "Vaccine"
+msgstr "Vaccins"
+
+msgid "Hierarchy"
+msgstr "Hiérarchie"
+
+msgid "all ages"
+msgstr "tous les ages"
+
+msgid "target age"
+msgstr "âge cible"
+
+msgid "coverage"
+msgstr "couverture"
+
+msgid "Performance report has not been configured, contact the administrators."
+msgstr ""
+"Le rapport de performance n’est pas configuré, contactez l’administrateur."
+
+#, fuzzy
+msgid "DPT 1 coverage"
+msgstr "Couverture"
+
+#, fuzzy
+msgid "DPT 1 to 3 dropout rate"
+msgstr "Taux d’abandon"
+
+msgid "Orgunits"
+msgstr "Unité d’organisation"
+
+msgid "Summary by month"
+msgstr "Résumé par mois"
+
+msgid "Summary by orgunit"
+msgstr "Résumé par orgunit"
+
+msgid "Identifying data"
+msgstr "Identification des données"
+
+msgid "Downloading data"
+msgstr "Télécharger CSV"
+
+msgid "January"
+msgstr "Janvier"
+
+msgid "February"
+msgstr "Février"
+
+msgid "March"
+msgstr "Mars"
+
+msgid "April"
+msgstr "Avril"
+
+msgid "May"
+msgstr "Mai"
+
+msgid "June"
+msgstr "Juin"
+
+msgid "July"
+msgstr "Juillet"
+
+msgid "August"
+msgstr "Août"
+
+msgid "September"
+msgstr "Septembre"
+
+msgid "October"
+msgstr "Octobre"
+
+msgid "November"
+msgstr "Novembre"
+
+msgid "December"
+msgstr "Décembre"
+
+msgid "Vaccines - doses and coverage"
+msgstr "Vaccins - doses et couverture"
+
+msgid "Performance - coverage vs dropout rate"
+msgstr "Performance - couverture vs taux d’abandon"
+
+msgid "Monitoring chart"
+msgstr "Graphique de suivi"
+
+msgid "Multiple vaccines for one orgunit"
+msgstr "Plusieurs vaccins pour une orgunit"
+
+msgid "One vaccine for multiple orgunits"
+msgstr "Un vaccin pour pour plusieurs orgunits"
+
+msgid "Multiple vaccines for one year"
+msgstr "Plusieurs vaccins pour une année"
+
+msgid "One vaccine for multiple years"
+msgstr "Un vaccin pour plusieurs années"
+
+msgid "RIM Export"
+msgstr "Exportation RIM"
+
+msgctxt "export"
+msgid "RIM"
+msgstr "RIM"
