Updated translation template and added Spanish file

--- a/i18n/es.po
+++ b/i18n/es.po
@@ -1,12 +1,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: i18next-conv\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "POT-Creation-Date: 2022-03-17T12:01:53.327Z\n"
-"PO-Revision-Date: 2022-03-17T12:01:53.327Z\n"
+"PO-Revision-Date: 2022-03-17 16:33+0100\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: es\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.0.1\n"
 
 msgid "Totals"
 msgstr ""
@@ -142,7 +146,8 @@ msgstr ""
 msgid "Completeness"
 msgstr ""
 
-msgid "Select the EPI data set/reporting form to use for reporting on completeness"
+msgid ""
+"Select the EPI data set/reporting form to use for reporting on completeness"
 msgstr ""
 
 msgid "Update configuration"
@@ -187,8 +192,8 @@ msgid "Vaccine disaggregation"
 msgstr ""
 
 msgid ""
-"Is vaccination data disaggregated by static/outreach, or "
-"static/outreach/mobile?"
+"Is vaccination data disaggregated by static/outreach, or static/outreach/"
+"mobile?"
 msgstr ""
 
 msgid "Toggle all"
